# mcp_email_triage

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
src/mcp_email_triage/: __init__.py  __main__.py  cli.py  server.py
tests/: __init__.py  test_email_client.py
