[project]
name = "mcp_email_triage"
version = "0.1.0"
description = "MCP server that connects to email providers (Gmail, Outlook) and provides intelligent email management through categorization, summarization, priority detection, and action item extraction."
readme = "README.md"
authors = [
  {name = "MArva Noah", email = "marvoosh@gmail.com"}
]
maintainers = [
  {name = "MArva Noah", email = "marvoosh@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/marvoosh/mcp_email_triage/issues"
changelog = "https://github.com/marvoosh/mcp_email_triage/blob/master/changelog.md"
homepage = "https://github.com/marvoosh/mcp_email_triage"

[project.scripts]
mcp_email_triage = "mcp_email_triage.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
